update alert placeholder comment in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h4 class="mb-0">Generate a Secure Password</h4>
                     </div>
                     <div class="card-body">
-                        <!-- Alerts will appear here -->
+                        <!-- Alerts placeholder -->
                         <div id="liveAlertPlaceholder"></div>
 
                         <div class="mb-3">
