add margin to button elements in index.html for improved spacing

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
                             />
                         </div>
                         <div class="mb-3 d-flex justify-content-center gap-2"></div>
-                            <button class="btn btn-outline-dark" onclick="copyPassword()" id="copyButton">
+                            <button class="btn btn-outline-dark" onclick="copyPassword()" id="copyButton" style="margin: 1px;">
                                 <i class="bi bi-clipboard"></i> Copy
                             </button>
-                            <button class="btn btn-outline-dark" onclick="clearPassword(true)" id="clearButton">
+                            <button class="btn btn-outline-dark" onclick="clearPassword(true)" id="clearButton" style="margin: 1px;">
                                 <i class="bi bi-x-circle"></i> Clear
                             </button>
-                            <button class="btn btn-outline-dark" onclick="viewPasswords()" id="viewButton">
+                            <button class="btn btn-outline-dark" onclick="viewPasswords()" id="viewButton" style="margin: 1px;">
                                 <i class="bi bi-file-plus"></i> View Passwords
                             </button>
                         </div>
