increased password length limit to 64 and added a copy to clipboard button for the recently generated passwords

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" style="max-height: 300px; overflow-y: auto;">
+                    <!--Alert space for copying passwords in the popup-->
+                    <div id="liveAlertPlaceholderPopup"></div>
+
+
+
                     <ul id="passwordList" class="list-group">
                         <!-- Dynamically populated passwords will go here -->
                     </ul>
